question 12 of the structured list

--- a/listas/estruturadas/.vscode/settings.json
+++ b/listas/estruturadas/.vscode/settings.json
@@ -41,5 +41,6 @@
         "streambuf": "cpp",
         "typeinfo": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "prettier.useTabs": true
 }
